--- a/css/index.css
+++ b/css/index.css
@@ -873,3 +873,9 @@ select option {
     margin: 10px;
 }
 
+.trend-chart-container {
+    width: 100%;
+    height: 200px;
+    margin: 20px 0;
+}
+
