--- a/css/flashcard.css
+++ b/css/flashcard.css
@@ -108,6 +108,11 @@ body {
     perspective: 1000px;
     cursor: pointer;
     margin: 20px 0;
+    transition: opacity 0.15s ease-in-out;
+}
+
+.flashcard.transitioning {
+    opacity: 0;
 }
 
 .card-inner {
@@ -115,19 +120,15 @@ body {
     width: 100%;
     height: 100%;
     text-align: center;
-    transition: transform 0.6s;
+    transition: transform 0.3s ease-in-out;
     transform-style: preserve-3d;
 }
 
-.flashcard.flipped .card-inner {
-    transform: rotateY(180deg);
-}
-
 .card-front, .card-back {
+    backface-visibility: hidden;
     position: absolute;
     width: 100%;
     height: 100%;
-    backface-visibility: hidden;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -139,6 +140,10 @@ body {
 }
 
 .card-back {
+    transform: rotateY(180deg);
+}
+
+.flashcard.flipped .card-inner {
     transform: rotateY(180deg);
 }
 
